--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/parser": "^2.31.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
